# assisted-chat-rag

./: .dockerignore  .gitignore  Containerfile  Makefile  OWNERS  README.md  main.py  pyproject.toml
.tekton/: assisted-chat-rag-pull-request.yaml  assisted-chat-rag-push.yaml  assisted-chat-rag-saas-main-pull-request.yaml  assisted-chat-rag-saas-main-push.yaml
docs/: Assisted_Installer_for_OpenShift_Container_Platform-2025-Installing_OpenShift_Container_Platform_with_the_Assisted_Installer-en-US.md  OpenShift_Container_Platform-4.19-Installing_on_OCI-en-US.md
docs-processed/: Assisted_Installer_for_OpenShift_Container_Platform-2025-Installing_OpenShift_Container_Platform_with_the_Assisted_Installer-en-US.md  OpenShift_Container_Platform-4.19-Installing_on_OCI-en-US.md
scripts/: add_headers_to_markdown.sh
