[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "lightspeed-rag-content",
]

[tool.uv.sources]
lightspeed-rag-content = { git = "https://github.com/andrej1991/rag-content.git", branch = "assisted-chat" }
